# chessai

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: main.yml
chessai/: __init__.py
chessai/agents/: __init__.py  aggressive.py  dummy.py  random.py  scripted.py  testing.py  value.py
chessai/chess/: __init__.py  __main__.py  bin.py  game.py  gamestate.py  team.py
chessai/core/: agent.py  agentaction.py  agentinfo.py  board.py  game.py  gamestate.py
chessai/core/isolation/: __init__.py  isolator.py  level.py  none.py
chessai/test/: __init__.py
chessai/test/testdata/cli/tests/: timeout_none_action.txt
chessai/util/: __init__.py  alias.py  alias_test.py  bin.py  reflection.py  reflection_test.py
scripts/: check_lint.sh  check_python_version.sh  check_strict_types.sh  check_types.sh  gen_docs.sh
